--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Rapido</title>
-    <meta name="description" content="Rapido: create HTML documents with micro-templates.">
-    <meta name="description" content="Create motherfucker websites with Rapido.">
+    <meta name="description" content="Rapido: create web documents with the only use of HTML snippets.">
     <meta name="robots" content="index,follow">
 
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
