close #16 | describe how to get rapido.css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css" integrity="sha384-D+9gmBxUQogRLqvARvNLmA9hS2x//eK1FhVb9PiU86gmcrBrJAQT8okdJ4LMp2uv" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.js" integrity="sha384-483A6DwYfKeDa0Q52fJmxFXkcPCFfnXMoXblOkJ4JcA8zATN6Tm78UNL72AKk+0O" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/contrib/auto-render.min.js" integrity="sha384-yACMu8JWxKzSp/C1YV86pzGiQ/l1YUfE8oPuahJQxzehAjEt2GiQuy/BIvl9KyeF" crossorigin="anonymous" onload="renderMathInElement(document.body,{delimiters: [{left: '$$', right: '$$', display: true},{left: '$', right: '$', display: false}]});"></script>
-    <link href="./index.css" rel="stylesheet" type="text/css">
+    <link href="./rapido.css" rel="stylesheet" type="text/css">
   </head>
   <body class="rapido">
     <main>
@@ -57,7 +57,7 @@
   &lt;html&gt;
     &lt;head&gt;
       &lt;meta charset="utf-8"&gt;
-      &lt;link href="Rapido.css" rel="stylesheet" type="text/css"&gt;
+      &lt;link href="rapido.css" rel="stylesheet" type="text/css"&gt;
     &lt;/head&gt;
     &lt;body class="rapido"&gt;
       &lt;main&gt;
@@ -78,7 +78,10 @@
 &lt;article&gt;</code></pre>
             </figure>
           </p>
-          <p>The css stylesheet <code>Rapido.css</code>, you can download it at <strong>TODO</strong>.</p>
+          <p>The css stylesheet <code>rapido.css</code>, you can download it from <a href="https://raw.githubusercontent.com/nextbitlabs/Rapido/master/index.css">github</a> or directly use
+          <figure>
+            <pre><code>&lt;link href="https://cdn.rawgit.com/nextbitlabs/Rapido/master/index.css" rel="stylesheet" type="text/css"&gt;</code></pre>
+          </figure> whithin element <code>&lt;head&gt;</code>.</p>
           <p>The next sections describe how to replace the ellipsis <code>...</code> with content of interest, like paragraph, figures, tables and so on.</p>
         </section>
 
