close #35 | spell check

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <p>This the first example of an html snippet. Rapido is just that: copy and paste the html snippets and fill the gaps <code>...</code> with your own content.</p>
             </figcaption>
           </figure>
-          <p>Note that Rapido can be used in a web document created from scratch or withing an existing document, the CSS class <code>class="rapido"</code> makes Rapido not invasive with respect existing CSS code. Generally speacking, you will want to assign the class <code>rapido</code> to the HTML container of your document, for example in
+          <p>Note that Rapido can be used in a web document created from scratch or within an existing document, the CSS class <code>class="rapido"</code> makes Rapido not invasive with respect existing CSS code. Generally speaking, you will want to assign the class <code>rapido</code> to the HTML container of your document, for example in
             <figure>
               <pre><code>&lt;article class="rapido"&gt;
   ...
@@ -102,7 +102,7 @@
               <p>A section with a heading and two paragraphs.</p>
             </figcaption>
           </figure>
-          <p>The html snippet above creates a section with some content, at this moment you can succesfully open your <code>document.html</code> file with a browser.</p>
+          <p>The html snippet above creates a section with some content, at this moment you can successfully open your <code>document.html</code> file with a browser.</p>
         </section>
 
         <section>
@@ -132,7 +132,7 @@
         <section>
           <h1>Side comments</h1>
           <p>This section describes how to add a <strong>side comment</strong>. Side comments typically show parenthetical content considered part of the main flow, like qualifying remarks directly related to the section.<small>Hello, I am a side comment. I am quite good in telling anecdotes or cool details, read me if you want, you don't have to.</small></p>
-          <p>A side comment should be inserted withing the paragraph of a section, it will appear at the right of the paragraph and vertically aligned with it, or just below the paragraph on smaller screens.</p>
+          <p>A side comment should be inserted within the paragraph of a section, it will appear at the right of the paragraph and vertically aligned with it, or just below the paragraph on smaller screens.</p>
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
@@ -170,7 +170,7 @@
   &lt;/figure&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
-              <p>Code snippet of an image, with a descriptive caption. For preparatory purpose, tag <code>&lt;figure&gt;</code> has been presented withing a section with a heading and two paragraphs.</p>
+              <p>Code snippet of an image, with a descriptive caption. For preparatory purpose, tag <code>&lt;figure&gt;</code> has been presented within a section with a heading and two paragraphs.</p>
             </figcaption>
           </figure>
           <p>Exactly the same html snipped is used for displaying videos, with the obvious difference of using tag <code>&lt;video&gt;</code> in place of tag <code>&lt;img&gt;</code>, as shown below.</p>
@@ -196,7 +196,7 @@
 
         <section>
           <h1>Quotations</h1>
-          <p>This section shows how to add <strong>quotations</strong> into your document. Element <code>&lt;blockquote&gt;</code> can be inserted in a section withing other paragraphs and may contains one or more paragraphs as well.</p>
+          <p>This section shows how to add <strong>quotations</strong> into your document. Element <code>&lt;blockquote&gt;</code> can be inserted in a section within other paragraphs and may contains one or more paragraphs as well.</p>
           <blockquote>
             <p><strong>Rapido</strong> is just that: copy and paste the html snippets and fill the gaps.</p>
           </blockquote>
@@ -209,7 +209,7 @@
               <p>HTML snippet of a quote. Note that element <code>&lt;cite&gt;</code> is optional.</p>
             </figcaption>
           </figure>
-          <p>Quotations highlight pieces of information and they are styled with a font bigger than the sorrounding text. If appropriate, use the cite attribute for adding a URL of the quotation source and the <code>&lt;cite&gt;</code> element for the text representation, both of them are optional.</p>
+          <p>Quotations highlight pieces of information and they are styled with a font bigger than the surrounding text. If appropriate, use the cite attribute for adding a URL of the quotation source and the <code>&lt;cite&gt;</code> element for the text representation, both of them are optional.</p>
         </section>
 
         <section>
@@ -248,7 +248,7 @@
                   </tr>
                  <tr>
                     <td>2013</td>
-                    <td>Organisation for the Prohibition of Chemical Weapons (OPCW)</td>
+                    <td>Organization for the Prohibition of Chemical Weapons (OPCW)</td>
                     <td>for its extensive efforts to eliminate chemical weapons</td>
                   </tr>
                 </tbody>
@@ -407,13 +407,13 @@
 
         <section>
           <h1>Math formulas</h1>
-          <p>Math typesetting is not supported by default. We suggest to use <a href="https://katex.org/">KaTeX</a>, a popular JavaScript library for TeX math rendering on the web. If this is also your way, then copy and paste the next code withing the <code>&lt;head&gt;...&lt;/head&gt;</code> elements (see section <a href="#getting-started"><strong>Getting Started</strong></a>) to get KaTeX working.</p>
+          <p>Math typesetting is not supported by default. We suggest to use <a href="https://katex.org/">KaTeX</a>, a popular JavaScript library for TeX math rendering on the web. If this is also your way, then copy and paste the next code within the <code>&lt;head&gt;...&lt;/head&gt;</code> elements (see section <a href="#getting-started"><strong>Getting Started</strong></a>) to get KaTeX working.</p>
           <figure>
             <pre><code>&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css" integrity="sha384-D+9gmBxUQogRLqvARvNLmA9hS2x//eK1FhVb9PiU86gmcrBrJAQT8okdJ4LMp2uv" crossorigin="anonymous"&gt;
 &lt;script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.js" integrity="sha384-483A6DwYfKeDa0Q52fJmxFXkcPCFfnXMoXblOkJ4JcA8zATN6Tm78UNL72AKk+0O" crossorigin="anonymous"&gt;&lt;/script&gt;
 &lt;script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/contrib/auto-render.min.js" integrity="sha384-yACMu8JWxKzSp/C1YV86pzGiQ/l1YUfE8oPuahJQxzehAjEt2GiQuy/BIvl9KyeF" crossorigin="anonymous" onload="renderMathInElement(document.body,{delimiters: [{left: '$$', right: '$$', display: true},{left: '$', right: '$', display: false}]});"&gt;&lt;/script&gt;</code></pre>
           </figure>
-          <p>You can insert mathematics inline a paragraph, like the famous equivalence between energy and inertial mass $E = mc^2$, sorrounding the mathematical formula with symbols <code>$...$</code>, as presented below.</p>
+          <p>You can insert mathematics inline a paragraph, like the famous equivalence between energy and inertial mass $E = mc^2$, surrounding the mathematical formula with symbols <code>$...$</code>, as presented below.</p>
           <figure>
             <pre><code>&lt;p&gt;... $E = mc^2$ ...&lt;/p&gt;</code></pre>
             <figcaption>
