close #12 | Add author image inside address element

--- a/index.html
+++ b/index.html
@@ -115,16 +115,18 @@
       &lt;h1&gt;...&lt;/h1&gt;
       &lt;p&gt;...&lt;/p&gt;
       &lt;p&gt;...&lt;/p&gt;
-      &lt;address&gt;...&lt;/address&gt;
+      &lt;address&gt;
+        &lt;a href="..."&gt;&lt;img src="..."&gt;...&lt;a&gt;
+      &lt;/address&gt;
     &lt;/header&gt;
     ...
   &lt;/article&gt;
 &lt;/main&gt;</code></pre>
             <figcaption>
-              <p>Code snippet for the header of your article. Element <code>&lt;address&gt;</code> is optional and it can be used to indicate the authors of an article.</p>
+              <p>Code snippet for the document header. Element <code>&lt;address&gt;</code> is optional, it can be used to indicate the contact information of the authors. Element <code>&lt;img&gt;</code> is also optional, it should be the avatar image.</p>
             </figcaption>
           </figure>
-          <p>On the following code snippets are supposed to be pasted inside element <code>&lt;article&gt;</code>, so that tags <code>&lt;main&gt;</code> and <code>&lt;article&gt;</code> are understood.</p>
+          <p>On the following, code snippets are supposed to be pasted inside element <code>&lt;article&gt;</code>, so that tags <code>&lt;main&gt;</code> and <code>&lt;article&gt;</code> are understood and can be omitted.</p>
         </section>
 
         <section>
