added 2018 Nobel Peace Prize laureates

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
                 </thead>
                 <tbody>
                   <tr>
+                    <td>2018</td>
+                    <td>Denis Mukwege and Nadia Murad</td>
+                    <td>for their efforts to end the use of sexual violence as a weapon of war and armed conflict.</td>
+                  </tr>
+                  <tr>
                     <td>2017</td>
                     <td>International Campaign to Abolish Nuclear Weapons (ICAN)</td>
                     <td>for its work to draw attention to the catastrophic humanitarian consequences of any use of nuclear weapons and for its ground-breaking efforts to achieve a treaty-based prohibition of such weapons</td>
