close #41 | add document footer

--- a/index.html
+++ b/index.html
@@ -536,10 +536,27 @@
               <h1>Responsive navigation menu</h1>
               <p>Screenshot of <a href="https://www.mozilla.org/en-US/firefox/developer/">Firefox</a> developer tools.</p>
               <p>The <code>&lt;button&gt;</code> elements provide a way to open and close the menu on small screens, supporting menu with one or more links.</p>
+        </section>
+
+        <section>
+          <h1>Copyrights</h1>
+          <p>This section describes how place the copyright notice at the bottom of the document. You can add a copyright notice through a paragraph <code>&lt;p&gt;</code> within a <code>&lt;footer&gt;</code> element. Note that <code>&lt;footer&gt;</code> has to be the last child of element <code>&lt;main&gt;</code>.</p>
+          <figure>
+            <pre><code>&lt;main&gt;
+  ...
+  &lt;footer&gt;
+    &lt;p&gt;&lt;small&gt;...&lt;/small&gt;&lt;/p&gt;
+  &lt;/footer&gt;
+&lt;/main&gt;</code></pre>
+            <figcaption>
+              <p>Code snippet for stating content attribution or licensing.</p>
             </figcaption>
           </figure>
         </section>
       </article>
+      <footer>
+        <p><small>Created with &lt;3 in <a href="https://open.nextbit.it/">Nextbit</a> | <a href="https://github.com/nextbitlabs/Rapido/blob/master/LICENSE">MIT License</a></small></p>
+      </footer>
     </main>
   </body>
 </html>
