close #50 | stop using rawgit

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 &lt;article&gt;</code></pre>
             </figure>
           </p>
-          <p>The css stylesheet <code>rapido.css</code> can be downloaded from <a href="https://raw.githubusercontent.com/nextbitlabs/Rapido/master/index.css">github</a>, in alternative you can simply use the following line within element <code>&lt;head&gt;</code>.</p>
+          <p>The css stylesheet <code>rapido.css</code> can be downloaded from <a href="https://raw.githubusercontent.com/nextbitlabs/Rapido/master/rapido.css">github</a>, in alternative you can simply use the following line within element <code>&lt;head&gt;</code>.</p>
           <figure>
-            <pre><code>&lt;link href="https://cdn.rawgit.com/nextbitlabs/Rapido/master/index.css" rel="stylesheet" type="text/css"&gt;</code></pre>
+            <pre><code>&lt;link href="https://unpkg.com/@nextbitlabs/rapido@latest/rapido.css" rel="stylesheet" type="text/css"&gt;</code></pre>
           </figure>
           <p>The next sections describe how to replace the ellipsis <code>...</code> with content of interest, like paragraph, figures, tables and so on.</p>
         </section>
